--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 			<!-- Banner -->
 				<section id="banner">
+					<img src="images/tommy_ren.jpg">
+
 					<header>
 						<h2>My name is Tommy, I am a software developer</h2>
 					</header>
@@ -77,7 +79,7 @@
 								<div class="box highlight">
 									<i class="icon major fa-wrench"></i>
 									<h3>Recently</h3>
-									<p>I took it upon myself to learn as much computer programming as fast as possible so I attended App Academy, a 1000 plus hour intensive coding bootcamp with a selective acceptance rate, and was able to create interesting projects: FacePlace, Chance Quest, and Action Archive. Check them out in the projects tab!</p>
+									<p>I took it upon myself to learn as much computer programming as fast as possible so I attended App Academy, a 1000 plus hour intensive coding bootcamp with a selective acceptance rate, and was able to create interesting projects: FacePlace, Chance Quest, and Action Archive. Check them out in the projects tabs!</p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
