add faceplace image

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	</head>
 	<body>
 		<div id="page-wrapper">
@@ -78,6 +79,16 @@
 					<div class="container">
 						<header class="major">
 							<h2>Notable Skills</h2>
+							<i class="devicon-ruby-plain-wordmark colored"></i>
+							<i class="devicon-rails-plain-wordmark colored"></i>
+							<i class="devicon-javascript-plain colored"></i>
+							<i class="devicon-react-original-wordmark colored"></i>
+							<i class="devicon-jquery-plain-wordmark colored"></i>
+							<i class="devicon-postgresql-plain-wordmark colored"></i>
+							<i class="devicon-html5-plain-wordmark colored"></i>
+							<i class="devicon-css3-plain-wordmark colored"></i>
+							<i class="devicon-git-plain-wordmark colored"></i>
+							<i class="devicon-amazonwebservices-plain-wordmark colored"></i>
 						</header>
 					</div>
 				</section>
@@ -85,13 +96,14 @@
 			<!-- Posts -->
 				<section class="wrapper style1">
 					<div class="container">
+						<h1>Projects</h1>
 						<div class="row">
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="faceplace.html" class="image left"><img src="images/faceplace.png" alt="" /></a>
 									<div class="inner">
-										<h3>The First Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>FacePlace</h3>
+										<p>A social media website inspired by Facebook. Connect with your friends today. Features a sleek single page user interface. <a href="faceplace.html">Learn more</a></p>
 									</div>
 								</div>
 							</section>
@@ -99,8 +111,8 @@
 								<div class="box post">
 									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The Second Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Chance Quest</h3>
+										<p>A turn based strategy game inspired by the board game Risk. Conquer your rival kingdom in an game of chance and domination. <a href="chancequest.html">Learn more</a> </p>
 									</div>
 								</div>
 							</section>
@@ -110,17 +122,8 @@
 								<div class="box post">
 									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The Third Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-							<section class="6u 12u(narrower)">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The Fourth Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Action Archive</h3>
+										<p>A lightweight ORM for the Ruby programming language. Features simple to use functionality through class inheritance. <a href="actionarchive.html">Learn more</a> </p>
 									</div>
 								</div>
 							</section>
@@ -133,19 +136,10 @@
 					<div class="container">
 					<!-- Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+							<li><a href="https://github.com/tommyr418" class="icon fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/mengling-tommy-ren-967647152/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://angel.co/mengling-tommy-ren?public_profile=1" class="icon fa-angellist"><span class="label">AngelList</span></a></li>
 						</ul>
-
-					<!-- Copyright -->
-						<div class="copyright">
-							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
 
 				</div>
 
