--- a/chancequest.html
+++ b/chancequest.html
@@ -45,27 +45,18 @@
 									<!-- Sidebar -->
 
 										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
-											<footer>
-												<a href="#" class="button">Continue Reading</a>
-											</footer>
+											<h3>Technology</h3>
+											<p>EaselJS library used for simple interaction with an HTML5 canvas. Game menus handled with CSS.</p>
 										</section>
 
 										<section>
-											<h3>Another Subheading</h3>
+											<h3>Useful Links</h3>
 											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit in lectus</a></li>
-												<li><a href="#">Semper mod quis eget mi dolore</a></li>
-												<li><a href="#">Consequat etiam lorem phasellus</a></li>
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
+												<li><a href="#">Github Repo</a></li>
+												<li><a href="#">Check it out</a></li>
 											</ul>
 											<footer>
-												<a href="#" class="button">More Random Links</a>
+												<a href="index.html" class="button">Home Page</a>
 											</footer>
 										</section>
 
@@ -114,25 +105,16 @@
 				</section>
 
 			<!-- Footer -->
-				<div id="footer">
-					<div class="container">
-					<!-- Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-						</ul>
+			<div id="footer">
+				<div class="container">
+				<!-- Icons -->
+					<ul class="icons">
+						<li><a href="https://github.com/tommyr418" class="icon fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/mengling-tommy-ren-967647152/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://angel.co/mengling-tommy-ren?public_profile=1" class="icon fa-angellist"><span class="label">AngelList</span></a></li>
+					</ul>
 
-					<!-- Copyright -->
-						<div class="copyright">
-							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-
-				</div>
+			</div>
 
 		</div>
 
