add pictures, links

--- a/faceplace.html
+++ b/faceplace.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Left Sidebar - Arcana by HTML5 UP</title>
+		<title>Tommy Ren</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -52,8 +52,8 @@
 										<section>
 											<h3>Useful Links</h3>
 											<ul class="links">
-												<li><a href="#">Github Repo</a></li>
-												<li><a href="#">Check it out</a></li>
+												<li><a href="https://github.com/tommyr418/FacePlace">Github Repo</a></li>
+												<li><a href="https://faceplace2017.herokuapp.com/#/">Check it out</a></li>
 											</ul>
 											<footer>
 												<a href="index.html" class="button">Home Page</a>
@@ -70,7 +70,6 @@
 										<article>
 											<header>
 												<h2>FacePlace</h2>
-												<p>Sidebar on the left, content on the right.</p>
 											</header>
 
 											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
