--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							</section>
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="chancequest.html" class="image left"><img src="images/chancequest.png" alt="" /></a>
 									<div class="inner">
 										<h3>Chance Quest</h3>
 										<p>A turn based strategy game inspired by the board game Risk. Conquer your rival kingdom in an game of chance and domination. <a href="chancequest.html">Learn more</a> </p>
@@ -120,7 +120,7 @@
 						<div class="row">
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="actionarchive.html" class="image left"><img src="images/actionarchive.png" alt="" /></a>
 									<div class="inner">
 										<h3>Action Archive</h3>
 										<p>A lightweight ORM for the Ruby programming language. Features simple to use functionality through class inheritance. <a href="actionarchive.html">Learn more</a> </p>
