--- a/actionarchive.html
+++ b/actionarchive.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Left Sidebar - Arcana by HTML5 UP</title>
+		<title>Tommy Ren</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -52,8 +52,7 @@
 										<section>
 											<h3>Useful Links</h3>
 											<ul class="links">
-												<li><a href="#">Github Repo</a></li>
-												<li><a href="#">Check it out</a></li>
+												<li><a href="https://github.com/tommyr418/ActionArchive">Github Repo</a></li>
 											</ul>
 											<footer>
 												<a href="index.html" class="button">Home Page</a>
