--- a/faceplace.html
+++ b/faceplace.html
@@ -74,27 +74,18 @@
 
 											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
+											<p>FacePlace is a full stack web application built from the ground up over the course of 9 days. It is designed to be reminicient of Facebook.</p>
 
-											<h3>And Yet Another Subheading</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+											<h3>What can you do?</h3>
+											<p>Start by creating an account. If you are short on time, try the demo login. It will log you in as Homer Simpson! Whichever way you choose, you will be intruduced to your news feed.</p>
 
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-											fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+											<p>News feed look too empty? Thats because you don't have any friends yet! Try searching for your friends using the search bar. You can search by first name, last name or full name.</p>
+
+											<p>Add friends by clicking the corresponding button on the search results. Not sure if it is the right person? Visit their page first and add from there! While your there check out their profile page.</p>
+
+											<p>You just realized you have nothing in your own profile page. Simply click your name on the nav bar and you can go there in a flash. Clich the profile picture to upload a picture of yourself. Same goes for the cover photo button</p>
+
+											<p>Add information about yourself by clicking the about tab. You can add as much about youself as you like under presorted catagories.</p>
 										</article>
 
 								</div>
