--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<img src="images/tommy_ren.jpg">
+					<img src="images/tommy.jpg">
 
 					<header>
-						<h2>My name is Tommy, I am a software developer</h2>
+						<h2>My name is Tommy, I am a software developer.</h2>
 					</header>
 				</section>
 
