--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" >
+		<link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico" >
 	</head>
 	<body>
 		<div id="page-wrapper">
