add target to all links

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<div id="page-wrapper">
@@ -55,14 +54,14 @@
 								<div class="box highlight">
 									<i class="icon major fa-pencil"></i>
 									<h3>Background</h3>
-									<p>I was once a aspiring phycician who graduated college with a B.S. in Biomedical sciences. Working in the healthcare industry for 2 years made me realize a doctor's life is not for me so I took my love of learning and problem solving in a new direction</p>
+									<p>I graduated college with a B.S. in Biomedical sciences. Originally with the goal of going to medical school, I worked in the healthcare industry for 2 years as an assistant to a gastroenterologist. I learned a lot about the day to day of a physician. I loved the deductiive reasoning that doctors had to employ to reach a diagnosis and propose a treatment. However, I also saw the negative impact of the heathcare industry as a whole on the life of physicians. I decided to take my love of problem solving in on a different path. </p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
 									<i class="icon major fa-wrench"></i>
 									<h3>Recently</h3>
-									<p>I took it upon myself to learn as much computer programming as fast as possible so I attended App Academy, a 1000 plus hour intensive coding bootcamp with a selective acceptance rate, and was able to create interesting projects: FacePlace, Chance Quest, and Action Archive. Check them out in the projects tabs!</p>
+									<p>My first experience with coding was in high school where I learned Java. I had not programmed in years so I was very rusty. I decided t jum back into programming with Ruby because of how elegant it was to read. I took it upon myself to reintroduce myself to computer programming as fast as possible so I attended App Academy, a 1000 plus hour intensive coding bootcamp with a selective acceptance rate, and was able to learn new technologies on order to create several interesting projects: FacePlace, Chance Quest, and Action Archive. </p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
@@ -138,9 +137,9 @@
 					<div class="container">
 					<!-- Icons -->
 						<ul class="icons">
-							<li><a href="https://github.com/tommyr418" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.linkedin.com/in/mengling-tommy-ren-967647152/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://angel.co/mengling-tommy-ren?public_profile=1" class="icon fa-angellist"><span class="label">AngelList</span></a></li>
+							<li><a href="https://github.com/tommyr418" class="icon fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/mengling-tommy-ren-967647152/" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://angel.co/mengling-tommy-ren?public_profile=1" class="icon fa-angellist" target="_blank"><span class="label">AngelList</span></a></li>
 						</ul>
 
 				</div>
