--- a/chancequest.html
+++ b/chancequest.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico" >
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<div id="page-wrapper">
@@ -53,8 +53,8 @@
 										<section>
 											<h3>Useful Links</h3>
 											<ul class="links">
-												<li><a href="https://github.com/tommyr418/ChanceQuest">Github Repo</a></li>
-												<li><a href="http://tommyren.me/ChanceQuest/">Check it out</a></li>
+												<li><a href="https://github.com/tommyr418/ChanceQuest" target="_blank">Github Repo</a></li>
+												<li><a href="http://tommyren.me/ChanceQuest/" target="_blank">Check it out</a></li>
 											</ul>
 											<footer>
 												<a href="index.html" class="button">Home Page</a>
@@ -92,9 +92,9 @@
 				<div class="container">
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="https://github.com/tommyr418" class="icon fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="https://www.linkedin.com/in/mengling-tommy-ren-967647152/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://angel.co/mengling-tommy-ren?public_profile=1" class="icon fa-angellist"><span class="label">AngelList</span></a></li>
+						<li><a href="https://github.com/tommyr418" class="icon fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/mengling-tommy-ren-967647152/" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://angel.co/mengling-tommy-ren?public_profile=1" class="icon fa-angellist" target="_blank"><span class="label">AngelList</span></a></li>
 					</ul>
 
 			</div>
