add info for action archive

--- a/actionarchive.html
+++ b/actionarchive.html
@@ -77,7 +77,9 @@
 											<p>Action Archive is an ORM for the Ruby programming language.</p>
 
 											<h3>What can you do?</h3>
-											<p></p>
+											<p>
+											Action Archive is a light-weight ORM for the Ruby programming language that allows for simple querying of databases through easy to use methods defined on a master class. When the master class is subclassed, it provides all of the functionality through class inheritance and meta-programming. Action Archive heavily depends on naming conventions that that will take much of the work away from a user as long as he or she adheres to the rules.
+											</p>
 										</article>
 
 								</div>
