add screenshot to projects pages

--- a/chancequest.html
+++ b/chancequest.html
@@ -73,7 +73,7 @@
 												<h2>Chance Quest</h2>
 											</header>
 
-											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+											<span class="image featured"><img src="images/chancequest_banner.png" alt="" /></span>
 
 											<p>Chance Quest is an exciting turn based strategy game with elements inspired by the board game Risk.</p>
 
