--- a/actionarchive.html
+++ b/actionarchive.html
@@ -72,7 +72,7 @@
 												<h2>Action Archive</h2>
 											</header>
 
-											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+											<span class="image featured"><img src="images/actionarchive_banner.png" alt="" /></span>
 
 											<p>Action Archive is an ORM for the Ruby programming language.</p>
 
