--- a/faceplace.html
+++ b/faceplace.html
@@ -74,7 +74,7 @@
 												<h2>FacePlace</h2>
 											</header>
 
-											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+											<span class="image featured"><img src="images/faceplace_banner.png" alt="" /></span>
 
 											<p>FacePlace is a full stack web application built from the ground up over the course of 9 days. It is designed to be reminicient of Facebook.</p>
 
