fix typos in summary

--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
 								<div class="box highlight">
 									<i class="icon major fa-pencil"></i>
 									<h3>Background</h3>
-									<p>I graduated college with a B.S. in Biomedical sciences. Originally with the goal of going to medical school, I worked in the healthcare industry for 2 years as an assistant to a gastroenterologist. I learned a lot about the day to day of a physician. I loved the deductiive reasoning that doctors had to employ to reach a diagnosis and propose a treatment. However, I also saw the negative impact of the heathcare industry as a whole on the life of physicians. I decided to take my love of problem solving in on a different path. </p>
+									<p>I graduated college with a B.S. in Biomedical sciences. Originally with the goal of going to medical school, I worked in the healthcare industry for 2 years as an assistant to a gastroenterologist. I learned a lot about the day to day of a physician. I loved the deductive reasoning that doctors had to employ to reach a diagnosis and propose a treatment. However, I also saw the negative impact of the healthcare industry as a whole on the life of physicians. I decided to take my love of problem solving in on a different path. </p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
 									<i class="icon major fa-wrench"></i>
 									<h3>Recently</h3>
-									<p>My first experience with coding was in high school where I learned Java. I had not programmed in years so I was very rusty. I decided t jum back into programming with Ruby because of how elegant it was to read. I took it upon myself to reintroduce myself to computer programming as fast as possible so I attended App Academy, a 1000 plus hour intensive coding bootcamp with a selective acceptance rate, and was able to learn new technologies on order to create several interesting projects: FacePlace, Chance Quest, and Action Archive. </p>
+									<p>My first experience with coding was in high school where I learned Java. I had not programmed in years so I was very rusty. I decided to jump back into programming with Ruby because of how elegant it was to read. I took it upon myself to reintroduce myself to computer programming as fast as possible so I attended App Academy, a 1000 plus hour intensive coding bootcamp with a selective acceptance rate, and was able to learn new technologies on order to create several interesting projects: FacePlace, Chance Quest, and Action Archive. </p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
 									<i class="icon major fa-paper-plane"></i>
 									<h3>Future</h3>
-									<p>I hope to take what I have learned and begin a new career in a feild I love. I know I can only reach my goals by  continuing to grow and learn with every project I work on.</p>
+									<p>I hope to take what I have learned and begin a new career in a field I love. I know I can only reach my goals by continuing to grow and learn with every project I work on.</p>
 								</div>
 							</section>
 						</div>
