--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 								<li><a href="faceplace.html">FacePlace</a></li>
 								<li><a href="chancequest.html">Chance Quest</a></li>
 								<li><a href="actionarchive.html">Action Archive</a></li>
+								<li><a href="Resume.pdf">Resume</a></li>
 							</ul>
 						</nav>
 
