add more to summary

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<div class="box highlight">
 									<i class="icon major fa-paper-plane"></i>
 									<h3>Future</h3>
-									<p>I hope to take what I have learned and begin a new career in a field I love. I know I can only reach my goals by continuing to grow and learn with every project I work on.</p>
+									<p>I hope to take what I have learned and begin a new career in a field that continues to challenge me. I am prepared to take on the inevitable bugs that arise, learn the new technologies that keep improving on the last, and work with the brightest people that continue to innovate the way we interact with our world. I know that only through hard work and determination can I reach my goals and continue to grow.</p>
 								</div>
 							</section>
 						</div>
