update chance quest intructions

--- a/chancequest.html
+++ b/chancequest.html
@@ -73,12 +73,18 @@
 												<h2>Chance Quest</h2>
 											</header>
 
-											<span class="image featured"><img src="images/chancequest_banner.png" alt="" /></span>
+											<span class="image featured"><img src="images/chancequest_banner." alt="" /></span>
 
 											<p>Chance Quest is an exciting turn based strategy game with elements inspired by the board game Risk.</p>
 
 											<h3>How do you play?</h3>
-											<p>Each player starts the game with one territory which is also the base. Players take turns moving units around to take over more territories to increase the prestige of their kingdom. Eventually players will need to compete for territories through battle. Gain then advantage of more resources to overwehelm your opponents!</p>
+											<ol>
+												<li>Players start with a base that is marked with a Star and some starting troops(3 for blue going first, 4 for red going second).</li>
+												<li>Players can move all but one of their units to an adjacent territory attempting to take it over. Most territories are empty by default. Players must fight for territories that are already controlled.</li>
+												<li>Battle is determined by dice roll. Both sides get to roll dice equal to the amount of units that are taking part of the battle(up to 3 for attacker up to 2 for defender). Dice rolls are compared from highest to lowest. Each time the dice is compared the side with the lower roll loses an unit. Ties result in the attacker losing an unit.</li>
+												<li>Players will recruit new units based on the amount of territories they control at the end of their turn.</li>
+												<li>A player wins if he or she takes over the enemy base.</li>
+											</ol>
 										</article>
 
 								</div>
