fix typo in summary

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<div class="box highlight">
 									<i class="icon major fa-pencil"></i>
 									<h3>Background</h3>
-									<p>I graduated college with a B.S. in Biomedical sciences. Originally with the goal of going to medical school, I worked in the healthcare industry for 2 years as an assistant to a gastroenterologist. I learned a lot about the day to day of a physician. I loved the deductive reasoning that doctors had to employ to reach a diagnosis and propose a treatment. However, I also saw the negative impact of the healthcare industry as a whole on the life of physicians. I decided to take my love of problem solving in on a different path. </p>
+									<p>I graduated college with a B.S. in Biomedical sciences. Originally with the goal of going to medical school, I worked in the healthcare industry for 2 years as an assistant to a gastroenterologist. I learned a lot about the day to day of a physician. I loved the deductive reasoning that doctors had to employ to reach a diagnosis and propose a treatment. However, I also saw the negative impact of the healthcare industry as a whole on the life of physicians. I decided to take my love of problem solving on a different path. </p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
