add link to email, resume

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 								<li><a href="faceplace.html">FacePlace</a></li>
 								<li><a href="chancequest.html">Chance Quest</a></li>
 								<li><a href="actionarchive.html">Action Archive</a></li>
-								<li><a href="Resume.pdf">Resume</a></li>
 							</ul>
 						</nav>
 
@@ -44,6 +43,10 @@
 
 					<header>
 						<h2>My name is Tommy, I am a software developer.</h2>
+						<br>
+						<a href="Resume.pdf">View My Resume</a>
+						<br>
+						<a href="mailto:tommyr418@gmail.com">Email Me</a>
 					</header>
 				</section>
 
