add page for stock tracker

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 								<li class="current"><a href="index.html">Home</a></li>
 								<li><a href="faceplace.html">FacePlace</a></li>
 								<li><a href="chancequest.html">Chance Quest</a></li>
+								<li><a href="stocktracker.html">Stock Tracker</a></li>
 								<li><a href="actionarchive.html">Action Archive</a></li>
 							</ul>
 						</nav>
@@ -129,6 +130,15 @@
 									<div class="inner">
 										<h3>Action Archive</h3>
 										<p>A lightweight ORM for the Ruby programming language. Features simple to use functionality through class inheritance. <a href="actionarchive.html">Learn more</a> </p>
+									</div>
+								</div>
+							</section>
+							<section class="6u 12u(narrower)">
+								<div class="box post">
+									<a href="stocktracker.html" class="image left"><img src="images/chancequest.png" alt="" /></a>
+									<div class="inner">
+										<h3>Chance Quest</h3>
+										<p>A simple tracker for the stock prices of five of the biggest tech companies. <a href="stocktracker.html">Learn more</a> </p>
 									</div>
 								</div>
 							</section>
