Edit name of tracker link

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 								<div class="box post">
 									<a href="stocktracker.html" class="image left"><img src="images/chancequest.png" alt="" /></a>
 									<div class="inner">
-										<h3>Chance Quest</h3>
+										<h3>Stock Tracker</h3>
 										<p>A simple tracker for the stock prices of five of the biggest tech companies. <a href="stocktracker.html">Learn more</a> </p>
 									</div>
 								</div>
