add stock tracker page

--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
 						<div class="row">
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="actionarchive.html" class="image left"><img src="images/actionarchive.png" alt="" /></a>
+									<a href="stocktracker.html" class="image left"><img src="images/stocktracker.png" alt="" /></a>
 									<div class="inner">
-										<h3>Action Archive</h3>
-										<p>A lightweight ORM for the Ruby programming language. Features simple to use functionality through class inheritance. <a href="actionarchive.html">Learn more</a> </p>
+										<h3>Stock Tracker</h3>
+										<p>A simple tracker for the stock prices of five of the biggest tech companies. <a href="stocktracker.html">Learn more</a> </p>
 									</div>
 								</div>
 							</section>
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="stocktracker.html" class="image left"><img src="images/chancequest.png" alt="" /></a>
+									<a href="actionarchive.html" class="image left"><img src="images/actionarchive.png" alt="" /></a>
 									<div class="inner">
-										<h3>Stock Tracker</h3>
-										<p>A simple tracker for the stock prices of five of the biggest tech companies. <a href="stocktracker.html">Learn more</a> </p>
+										<h3>Action Archive</h3>
+										<p>A lightweight ORM for the Ruby programming language. Features simple to use functionality through class inheritance. <a href="actionarchive.html">Learn more</a> </p>
 									</div>
 								</div>
 							</section>
