--- a/chancequest.html
+++ b/chancequest.html
@@ -30,6 +30,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="faceplace.html">FacePlace</a></li>
 							<li class="current"><a href="chancequest.html">Chance Quest</a></li>
+							<li><a href="stocktracker.html">Stock Tracker</a></li>
 							<li><a href="actionarchive.html">Action Archive</a></li>
 						</ul>
 					</nav>
