--- a/stocktracker.html
+++ b/stocktracker.html
@@ -80,9 +80,9 @@
 											<p>Stock Tracker is a simple and intuitive real-time tracker of stock prices for five of the biggest tech companies. These include: Microsoft, Facebook, Apple, Google, Amazon.</p>
 
 											<h3>Features</h3>
-											<p>The main page displays the current price of the companies. There is a sidebar to navigate to compnay pages on the left habd side. Return to the main page by clicking STOCK QUOTES</p>
+											<p>The main page displays the current price of the companies. There is a sidebar to navigate to company pages on the left hand side. Return to the main page by clicking STOCK QUOTES</p>
 
-											<p>Each company page automatically fetchs the most recent prices for the last 10 days of trading and displays a simple graph</p>
+											<p>Each company page automatically fetches the most recent prices for the last 10 days of trading and displays a simple graph</p>
 
 											<p>Data points on the graph can be clicked to reveal more detailed information on the price.</p>
 										</article>
