--- a/chancequest.html
+++ b/chancequest.html
@@ -55,10 +55,9 @@
 											<h3>Useful Links</h3>
 											<ul class="links">
 												<li><a href="https://github.com/tommyr418/ChanceQuest" target="_blank">Github Repo</a></li>
-												<li><a href="http://tommyren.me/ChanceQuest/" target="_blank">Check it out</a></li>
 											</ul>
 											<footer>
-												<a href="index.html" class="button">Home Page</a>
+												<a href="http://tommyren.me/ChanceQuest/" target="_blank" class="button">Play Now</a>
 											</footer>
 										</section>
 
