--- a/faceplace.html
+++ b/faceplace.html
@@ -56,10 +56,9 @@
 											<ul class="links">
 												<li><a href="https://github.com/tommyr418/FacePlace"
 													target="_blank">Github Repo</a></li>
-												<li><a href="http://www.faceplace.us/#/" target="_blank">Check it out</a></li>
 											</ul>
 											<footer>
-												<a href="index.html" class="button">Home Page</a>
+												<a href="http://www.faceplace.us/#/" target="_blank" class="button">Visit Now</a>
 											</footer>
 										</section>
 
