--- a/stocktracker.html
+++ b/stocktracker.html
@@ -52,14 +52,13 @@
 										</section>
 
 										<section>
-											<h3>Useful Links</h3>
+											<h3 style="color: #474747;">Useful Links</h3>
 											<ul class="links">
 												<li><a href="https://github.com/tommyr418/StockTracker"
 													target="_blank">Github Repo</a></li>
-												<li><a href="http://tommyren.me/StockTracker/#/" target="_blank">Check it out</a></li>
 											</ul>
 											<footer>
-												<a href="index.html" class="button">Home Page</a>
+												<a href="http://tommyren.me/StockTracker/#/" target="_blank" class="button">Visit Now</a>
 											</footer>
 										</section>
 
