reformat contact section

--- a/index.html
+++ b/index.html
@@ -193,28 +193,10 @@
       <hr>
     </div>
     <div class="col-md-8 col-md-offset-2">
-      <form name="sentMessage" id="contactForm" novalidate>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <input type="text" id="name" class="form-control" placeholder="Name" required="required">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              <input type="email" id="email" class="form-control" placeholder="Email" required="required">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-          <p class="help-block text-danger"></p>
-        </div>
-        <div id="success"></div>
-        <button type="submit" class="btn btn-default btn-lg">Send Message</button>
-      </form>
+      <div>
+        <h3>Send me an <a href="mailto:tommy@gmail.com">e-mail.</a></h3>
+        <h3>Or visit my profile links below.</h3>
+      </div>
       <div class="social">
         <ul>
           <li><a href="https://github.com/tommyr418" target="_blank"><i class="fa fa-github"></i></a></li>
@@ -222,13 +204,6 @@
           <li><a href="https://angel.co/mengling-tommy-ren?public_profile=1" target="_blank"><i class="fa fa-angellist"></i></a></li>
         </ul>
       </div>
-    </div>
-  </div>
-</div>
-<div id="footer">
-  <div class="container text-center">
-    <div class="fnav">
-      <p>Copyright &copy; 2016 Spectrum. Designed by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
