update all images for porfolio links

--- a/index.html
+++ b/index.html
@@ -80,9 +80,12 @@
       <div class="col-xs-12 col-md-6"> <img src="img/tommy.jpg" class="img-responsive" alt=""> </div>
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
-          <p>I graduated college with a B.S. in Biomedical sciences. Originally with the goal of going to medical school, I worked in the healthcare industry for 2 years as an assistant to a gastroenterologist. I learned a lot about the day-to-day of a physician. I loved the deductive reasoning that doctors had to employ to reach a diagnosis and propose a treatment. However, I also saw the negative impact of the healthcare industry as a whole on the life of physicians. I decided to take my love of problem solving on a different path.</p>
-          <p>My first experience with coding was in high school where I learned Java. I had not programmed in years so I was very rusty. I decided to jump back into programming with Ruby because of how elegant it was to read. I tried to refresh my understanding of computer programming as fast as possible so I attended App Academy, a 1000 plus hour intensive coding bootcamp with a selective acceptance rate, and was able to learn new technologies on order to create several interesting projects: FacePlace, Chance Quest, and Action Archive.</p>
-          <p>I hope to take what I have learned and begin a new career in a field that continues to challenge me. I am prepared to take on the inevitable bugs that arise, learn new innovative technologies, and work with the brightest people that continue to innovate the way we interact with our world. I know that only through hard work and determination can I reach my goals and continue to grow.</p>
+          <p>
+            I graduated college with a B.S. in Biomedical Sciences. I originally had the goal of going to medical school because I loved diagnosing problems and finding the solution or cure for them. After getting some first hand experience in the healthcare field, I decided it was not for me because of how clerical the work had become and the poor work life balance. I wanted to take my critical thinking skills and find a path that allowed me the thrive.
+          </p>
+          <p>
+            Then I found programming. As soon as I learned to print "hello world", I immediately fell in love with programming. It was a perfect match for my analytical mind. Figuring out something new and implementing it was the most satisfying feeling I had in a long time. I knew that if I became a developer, I would never find it dull and would be challenged in ways I had never been prior. That just made me more excited.
+          </p>
           <a href="#portfolio" class="btn btn-default btn-lg page-scroll">My Portfolio</a>
           <a href="Resume.pdf" class="btn btn-default btn-lg page-scroll" target="_blank">My Resume</a> </div>
       </div>
@@ -151,7 +154,7 @@
               <div class="hover-text">
                 <h4>FacePlace</h4>
               </div>
-              <img src="img/portfolio/faceplace.png" class="img-responsive" alt="FacePlace"> </a> </div>
+              <img src="img/portfolio/faceplace-g.png" class="img-responsive" alt="FacePlace"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 github">
@@ -160,7 +163,7 @@
               <div class="hover-text">
                 <h4>Chance Quest</h4>
               </div>
-              <img src="img/portfolio/chancequest.png" class="img-responsive" alt="Chance Quest"> </a> </div>
+              <img src="img/portfolio/chancequest-g.png" class="img-responsive" alt="Chance Quest"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 github">
@@ -169,7 +172,7 @@
               <div class="hover-text">
                 <h4>Stock Tracker</h4>
               </div>
-              <img src="img/portfolio/stocktracker.png" class="img-responsive" alt="Stock Tracker"> </a> </div>
+              <img src="img/portfolio/stocktracker-g.png" class="img-responsive" alt="Stock Tracker"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 github">
@@ -178,7 +181,7 @@
               <div class="hover-text">
                 <h4>Action Archive</h4>
               </div>
-              <img src="img/portfolio/actionarchive.png" class="img-responsive" alt="Action Archive"> </a> </div>
+              <img src="img/portfolio/actionarchive-g.png" class="img-responsive" alt="Action Archive"> </a> </div>
           </div>
         </div>
       </div>
