add skills icons

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="js/modernizr.custom.js"></script>
 
+<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -187,6 +190,24 @@
       </div>
     </div>
   </div>
+  <div class="container">
+    <div class="section-title text-center center">
+      <h2>Skills</h2>
+      <hr>
+    </div>
+		<div class="skill">
+			<i class="devicon-ruby-plain-wordmark colored"></i>
+			<i class="devicon-rails-plain-wordmark colored"></i>
+			<i class="devicon-javascript-plain colored"></i>
+			<i class="devicon-react-original-wordmark colored"></i>
+			<i class="devicon-jquery-plain-wordmark colored"></i>
+			<i class="devicon-postgresql-plain-wordmark colored"></i>
+			<i class="devicon-html5-plain-wordmark colored"></i>
+			<i class="devicon-css3-plain-wordmark colored"></i>
+			<i class="devicon-git-plain-wordmark colored"></i>
+			<i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+		</div>
+	</div>
 </div>
 <!-- Contact Section -->
 <div id="contact" class="text-center">
